--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
+    "dotenv>=0.9.9",
     "fastapi>=0.115.12",
     "google-generativeai>=0.8.5",
     "pillow>=11.2.1",
